  * DistUpgrade/DistUpgrade.cfg:
    - remove gnome-cups-manager on upgrade, system-config-printer 
      replaces it (LP: #107766)
    - set cursor to the start of the details list (LP: #134873)
  * DistUpgrade/dist-upgrade.py, DistUpgrade/DistUpgradeViewText.py,
    DistUpgrade/DistUpgradeViewKDE.py, DistUpgrade/DistUpgradeViewGtk.py:
    - make logdir a config option too
  * tests/test_sources_list.py, tests/data-sources-list-test:
    - added tests for sources.list rewriting

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Aug 2007 16:39:10 +0200

update-manager (1:0.69) gutsy; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - remove zero size meta-release files (LP: #127263)
  * utils/demoted.cfg:
    - updated to current gutsy
  * DistUpgrade/DistUpgrade.cfg:
    - added "esound", "esound-common" to forced obsoleted
      packages (replaced by pulseaudio)

  [ Jonathan Riddell ]
  * Change version text from 7.04 to 7.10 in KDE frontend

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Aug 2007 12:41:02 +0200

update-manager (1:0.68) gutsy; urgency=low

  * UpdateManager/DistUpgradeFetcherCore.py:
    - be extra paranoid when using ${countrymirror} 
  * DistUpgrade/DistUpgradeControler.py:
    - support countrymirror in prerequists.sources.list file
      too
  * UpdateManager/Common/utils.py:
    - added country_mirror() function

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 06 Aug 2007 17:48:43 +0200

update-manager (1:0.67) gutsy; urgency=low

  * UpdateManager/UpdateManager.py,
    tests/test_update_origin.py:
    - when checking for update category (Security, Important, ...)
      not only check candidateVersion but all intermediate versions
      too
    - added test for the new matcher behaviour
  * DistUpgrade/DistUpgradeControler.py:
    - fix PreRequists fetching 
    - better error checking/logging
  * DistUpgrade/DistUpgradeViewGtk.py,
    DistUpgrade/DistUpgradeViewKDE.py,: