@@ -441,3 +441,7 @@ http://ubuntu-archive.polytechnic.edu.na/
 http://ubuntu.media.mit.edu/ubuntu/
 http://ftp.ncnu.edu.tw/Linux/ubuntu/ubuntu/
 http://ftp.iut-bm.univ-fcomte.fr/ubuntu/
+http://esda.wu-wien.ac.at/pub/ubuntu-archive/
+http://mirror.aarnet.edu.au/pub/ubuntu/archive/
+http://ftp.hostrino.com/pub/ubuntu/archive/
+http://mirror.internode.on.net/pub/ubuntu/ubuntu/
