@@ -2,7 +2,58 @@ from gettext import gettext as _
 import locale
 import os
 
+def _inhibit_sleep_old_interface():
+  """
+  Send a dbus signal to org.gnome.PowerManager to not suspend
+  the system, this is to support upgrades from pre-gutsy g-p-m
+  """
+  import dbus
+  bus = dbus.Bus(dbus.Bus.TYPE_SESSION)
+  devobj = bus.get_object('org.gnome.PowerManager', 
+                          '/org/gnome/PowerManager')
+  dev = dbus.Interface(devobj, "org.gnome.PowerManager")
+  cookie = dev.Inhibit('UpdateManager', 'Updating system')
+  return (dev, cookie)
+
+def _inhibit_sleep_new_interface():
+  """
+  Send a dbus signal to gnome-power-manager to not suspend
+  the system
+  """
+  import dbus
+  bus = dbus.Bus(dbus.Bus.TYPE_SESSION)
+  devobj = bus.get_object('org.freedesktop.PowerManagement', 
+                          '/org/freedesktop/PowerManagement')
+  dev = dbus.Interface(devobj, "org.freedesktop.PowerManagement.Inhibit")
+  cookie = dev.Inhibit('UpdateManager', 'Updating system')
+  return (dev, cookie)
+
+def inhibit_sleep():
+  """
+  Send a dbus signal to power-manager to not suspend
+  the system, try both the new freedesktop and the
+  old gnome dbus interface
+  """
+  try:
+    return _inhibit_sleep_old_interface()
+  except Exception, e:
+    try:
+      return _inhibit_sleep_new_interface()
+    except Exception, e:
+      print "could not send the dbus Inhibit signal: %s" % e
+      return (False, False)
+
+def allow_sleep(dev, cookie):
+  """Send a dbus signal to gnome-power-manager to allow a suspending
+  the system"""
+  try:
+    dev.UnInhibit(cookie)
+  except Exception, e:
+    print "could not send the dbus UnInhibit signal: %s" % e
+
+
 def country_mirror():
+  " helper to get the country mirror from the current locale "
   # special cases go here
   lang_mirror = { 'C'     : '',
                 }
