@@ -51,6 +51,9 @@ libportaudio-doc
 libportaudio0
 libslab-dev
 libslab0
+libstlport5.1
+libstlport5.1-dbg
+libstlport5.1-dev
 libstonith-dev
 libstonith0
 libttf-dev
@@ -62,6 +65,8 @@ libxml1
 openjade1.3
 perlsgml
 pmount
+python-qt4-dbg
+python-qt4-sql-dbg
 rcs
 sgml2x
 unifdef
